# kaggle-playground-competitions

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
season_04/episode_07/: s4e7-insurance-cross-selling.ipynb  s4e7_insurance_cross_selling.ipynb
season_05/episode_07/: s5e7_introverts_vs_extroverts.ipynb  s5e7_stream.ipynb
season_05/episode_07/data/other/: dt_best_params.json  lr_best_params.json  rf_best_params.json  svc_best_params.json  xgb_best_params.json
utilities/: data_utilities.py  visualization_tools.py
